--- a/presume/resume.css
+++ b/presume/resume.css
@@ -36,8 +36,8 @@ header{
 
 
 #image {
-    height: 75%;
-    width: 25%;
+
+    width: 50%;
     border-radius: 50%;
     margin: 10px auto;
     grid-row: 2/3;
@@ -45,6 +45,10 @@ header{
     
 }
     
+.pic {
+    background-color: #C5C9D1;
+    padding-left: 175px;
+}
 .contact {
     grid-row: 2/3;
     grid-column: 3/4;
@@ -94,18 +98,23 @@ a:hover {
 }
 
 .job1 {
+    display: grid;
     background-color: #F4F4F4;
     grid-row: 4/5;
     grid-column: 1/3;
-
     
 }
 
-.job1 > h2, h3 {
+.job1 > h2, span {
+    grid-row: 1/3;
     justify-content: space-evenly;
     margin: 0;
     text-align: center;
     position: relative;
+}
+
+.li2 {
+    grid-column: 2/3;
 }
 
 .job2 {
